--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <script href="https://cdn.jsdelivr.net/npm/promise-polyfill@7/dist/polyfill.min.js"></script>
+    <script href="https://laquimage.b0.upaiyun.com/ICON/2019/4/2/hash1557803070707.js"></script>
     <script src="https://js.fundebug.cn/fundebug.0.3.4.min.js" apikey="4ff49c050ed0ead32da68d9e21f5923f31cc33c5cae1dcec93b14e03f84505e4"></script>
-    <script src="/src/utils/hash.js" ></script>
+    <!-- <script src="/src/utils/hash.js" ></script> -->
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <meta name=screen-orientation content=portrait>
     <meta name=apple-mobile-web-app-capable content=yes>
