--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta content="telephone=no,email=no" name=format-detection>
     <meta content="modeName=750-12" name=grid>
     <link rel="shortcut icon" href="/src/assets/common/images/favicon.ico" type="image/x-icon">
-    <title>慧眼女装</title>
+    <title>惠眼女装</title>
   </head>
   <body>
     <div id="app"></div>
