--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://laquimage.b0.upaiyun.com/ICON/2019/4/2/hash1557803070707.js"></script>
     <script src="https://laquimage.b0.upaiyun.com/ICON/2019/4/3/jbase641557930847707.js"></script>
     <!-- <script src="https://laquimage.b0.upaiyun.com/ICON/2019/4/4/qiyu21557936260306.js"></script> -->
+    <script src="https://laquimage.b0.upaiyun.com/ICON/2019/4/5/copy2clipboard1559309456259.js"></script>
     <!-- <script src="/src/utils/hash.js" ></script> -->
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <meta name=screen-orientation content=portrait>
