--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <script href="https://cdn.jsdelivr.net/npm/promise-polyfill@7/dist/polyfill.min.js"></script>
     
     <script src="https://js.fundebug.cn/fundebug.0.3.4.min.js" apikey="4ff49c050ed0ead32da68d9e21f5923f31cc33c5cae1dcec93b14e03f84505e4"></script>
-    <script src="https://laquimage.b0.upaiyun.com/ICON/2019/4/2/hash1557803070707.js"></script>
-    <script src="https://laquimage.b0.upaiyun.com/ICON/2019/4/3/jbase641557930847707.js"></script>
+    <script src="https://s0.laqu.com/ICON/2019/4/2/hash1557803070707.js"></script>
+    <script src="https://s0.laqu.com/ICON/2019/4/3/jbase641557930847707.js"></script>
     <!-- <script src="https://laquimage.b0.upaiyun.com/ICON/2019/4/4/qiyu21557936260306.js"></script> -->
-    <script src="https://laquimage.b0.upaiyun.com/ICON/2019/5/1/copy2clipboard1559530183077.js"></script>
+    <script src="https://s0.laqu.com/ICON/2019/5/1/copy2clipboard1559530183077.js"></script>
     <!-- <script src="/src/utils/hash.js" ></script> -->
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <meta name=screen-orientation content=portrait>
