--- a/index.html
+++ b/index.html
@@ -36,8 +36,17 @@
       alert('sdk尚未加载成功，请稍后再试');
     }
   }
-  
     </script>
+    <!-- <scriptsrc='http://w.cnzz.com/c.php?id=XXXXXXXX&l=2' language='JavaScript'charset='gb2312'></script> -->
+    <!-- <script>
+    var cnzz_s_tag = document.createElement('script');
+    cnzz_s_tag.type = 'text/javascript';
+    cnzz_s_tag.async = true;
+    cnzz_s_tag.charset = 'utf-8';
+    cnzz_s_tag.src = 'http://w.cnzz.com/c.php?id= XXXXXXXX &async=1';
+    var root_s = document.getElementsByTagName('script')[0];
+    root_s.parentNode.insertBefore(cnzz_s_tag, root_s);
+    </script> -->
     <script src="https://s0.laqu.com/ICON/2019/5/1/copy2clipboard1559530183077.js"></script>
     <!-- <script src="/src/utils/hash.js" ></script> -->
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
