--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <style>
+      #cnzz_stat_icon_1277784674{
+        position: fixed
+      }
+    </style>
     <script href="https://cdn.jsdelivr.net/npm/promise-polyfill@7/dist/polyfill.min.js"></script>
     
     <script src="https://js.fundebug.cn/fundebug.0.3.4.min.js" apikey="4ff49c050ed0ead32da68d9e21f5923f31cc33c5cae1dcec93b14e03f84505e4"></script>
@@ -37,16 +42,7 @@
     }
   }
     </script>
-    <!-- <scriptsrc='http://w.cnzz.com/c.php?id=XXXXXXXX&l=2' language='JavaScript'charset='gb2312'></script> -->
-    <!-- <script>
-    var cnzz_s_tag = document.createElement('script');
-    cnzz_s_tag.type = 'text/javascript';
-    cnzz_s_tag.async = true;
-    cnzz_s_tag.charset = 'utf-8';
-    cnzz_s_tag.src = 'http://w.cnzz.com/c.php?id= XXXXXXXX &async=1';
-    var root_s = document.getElementsByTagName('script')[0];
-    root_s.parentNode.insertBefore(cnzz_s_tag, root_s);
-    </script> -->
+    
     <script src="https://s0.laqu.com/ICON/2019/5/1/copy2clipboard1559530183077.js"></script>
     <!-- <script src="/src/utils/hash.js" ></script> -->
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
@@ -69,6 +65,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1277784674'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s96.cnzz.com/z_stat.php%3Fid%3D1277784674%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
   </body>
 </html>
