--- a/index.html
+++ b/index.html
@@ -65,10 +65,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1277859167'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1277859167%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
-    <script>
-      var _czc=window._czc||[];
-      _czc.push(["_setAutoPageview", false]);
-    </script>
+    <!-- <script type="text/javascript"></script> -->
   </body>
 </html>
