--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1277859167'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1277859167%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
     <style>
-      #cnzz_stat_icon_1277784674{
+      #cnzz_stat_icon_1277859167{
         position: fixed
       }
     </style>
+  <script>
+    var _czc=window._czc||[];
+    _czc.push(["_setAccount", "1277859167"]);
+  </script>
+   
+
     <script href="https://cdn.jsdelivr.net/npm/promise-polyfill@7/dist/polyfill.min.js"></script>
-    
     <script src="https://js.fundebug.cn/fundebug.0.3.4.min.js" apikey="4ff49c050ed0ead32da68d9e21f5923f31cc33c5cae1dcec93b14e03f84505e4"></script>
     <script src="https://s0.laqu.com/ICON/2019/4/2/hash1557803070707.js"></script>
     <script src="https://s0.laqu.com/ICON/2019/4/3/jbase641557930847707.js"></script>
-    <!-- <script src="https://s0.laqu.com/ICON/2019/4/4/qiyu21557936260306.js"></script> -->
     <script>
       (function (w, d, n, a, j) {
     w[n] = w[n] || function (){ 
@@ -65,6 +70,10 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- <script type="text/javascript"></script> -->
+   
+    <script>
+      var _czc=window._czc||[];
+      _czc.push(["_setAutoPageview", false]);
+    </script>
   </body>
 </html>
