--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1277859167'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1277859167%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+    <!-- <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1277859167'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1277859167%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script> -->
     <style>
-      #cnzz_stat_icon_1277859167{
+      /* #cnzz_stat_icon_1277859167{
         position: fixed
-      }
+      } */
     </style>
-  <script>
+  <!-- <script>
     var _czc=window._czc||[];
     _czc.push(["_setAccount", "1277859167"]);
-  </script>
+  </script> -->
    
 
     <script href="https://cdn.jsdelivr.net/npm/promise-polyfill@7/dist/polyfill.min.js"></script>
@@ -71,9 +71,9 @@
   <body>
     <div id="app"></div>
    
-    <script>
+    <!-- <script>
       var _czc=window._czc||[];
       _czc.push(["_setAutoPageview", false]);
-    </script>
+    </script> -->
   </body>
 </html>
