--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <!-- <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1277859167'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1277859167%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script> -->
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1277784674'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s96.cnzz.com/z_stat.php%3Fid%3D1277784674%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
     <style>
-      /* #cnzz_stat_icon_1277859167{
-        position: fixed
-      } */
+      #cnzz_stat_icon_1277784674{
+        position: fixed;
+        opacity: 0;
+      }
     </style>
   <!-- <script>
     var _czc=window._czc||[];
@@ -70,10 +71,9 @@
   </head>
   <body>
     <div id="app"></div>
-   
-    <!-- <script>
+    <script>
       var _czc=window._czc||[];
       _czc.push(["_setAutoPageview", false]);
-    </script> -->
+    </script>
   </body>
 </html>
